net overheads and profits drawer table alignment fixed

--- a/src/components/commonCss/style.scss
+++ b/src/components/commonCss/style.scss
@@ -6487,3 +6487,10 @@ left: 17rem;
 .child-component-tooltip {
   bottom: 23px;
 }
+
+.add-min-width {
+    width: 100%;
+    th {
+      width: 25%; 
+   }
+}
